# deeprust

./: .gitignore  Cargo.toml
benches/: crit.rs
src/: bitboard.rs  board.rs  castling.rs  cli.rs  color.rs  common.rs  fen.rs  lib.rs  main.rs  move_generator.rs  move_stack.rs  moves.rs  piece.rs  position.rs  search.rs  square.rs  types.rs  uci.rs  util.rs  zobrist.rs
src/bits/: mod.rs
src/board/: bitboard.rs  mod.rs  move_generator.rs  move_stack.rs  moves.rs  square.rs  util.rs
src/engine/: bitboard.rs  board.rs  mod.rs  move_generator.rs  move_stack.rs  moves.rs  position.rs  san.rs  search.rs  types.rs  util.rs  zobrist.rs
src/engine/board/: mod.rs  utils.rs
src/frontends/: cli.rs  mod.rs  uci.rs
src/grammars/: fen.pest  uci.pest
src/interfaces/: error.rs  fen.rs  lan.rs  mod.rs  uci.rs
src/primitives/: castling.rs  color.rs  mod.rs  move.rs  piece.rs  square.rs
tests/: hyatt-4000-openings.epd  perft-positions.txt  perftsuite.epd
tools/: decoders.ipynb
