[package]
name = "deeprust"
version = "0.1.0"
authors = ["Patrick Haas <patmanteau@posteo.de>"]

[[bin]]
name = "deeprust"
path = "src/main.rs"

[dependencies]
log = "0.4.6"
simple-logging = "2.0.2"
indoc = "0.3.3"
clap = "2.33.0"
unicode-segmentation = "1.3.0"
lazy_static = "1.3.0"

[features]
sanity_checks = []