[package]
name = "deeprust"
version = "0.1.0"
authors = ["Patrick Haas <patmanteau@posteo.de>"]
edition = "2015"

[[bin]]
name = "deeprust"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.2.11"

[dependencies]
regex = "1"
log = "0.4.6"
simple-logging = "2.0.2"
indoc = "0.3.3"
clap = "2.33.0"
unicode-segmentation = "1.3.0"
lazy_static = "1.3.0"
rand = "0.6.5"
quanta = "0.3.1"

[[bench]]
name = "crit"
harness = false

[profile.release]
debug = true

[features]
sanity_checks = []