[package]
name = "deeprust"
version = "0.1.0"
authors = ["Patrick Haas <patmanteau@posteo.de>"]
edition = "2018"

[[bin]]
name = "deeprust"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.2.11"

[dependencies]
log = "0.4.6"
simple-logging = "2"
indoc = "0.3.3"
clap = "2"
lazy_static = "1"
rand = "0.6.5"
quanta = "0.3.1"
nom = "5"
rayon = "1.1"

[[bench]]
name = "crit"
harness = false

[profile.release]
debug = true

[features]
sanity_checks = []
perft_testing = []